syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto";
option go_package = "nameserver/proto";

import "pagination.proto";

message ChannelTransform {
    string name = 1;
    string transform = 2;
    string description = 3;
}

message ChannelAlarm {
    string type = 1;
    string trigger_condition = 2;
}

message ChannelAccessControl {
    string role = 1;     
    optional bool read = 2;
    optional bool write = 3;
}
message Channel {    
    string name = 1;
    optional string description = 2;
    string device_name = 3;
    optional string metadata = 4;
    repeated ChannelTransform transforms = 5;
    repeated ChannelAlarm alarms = 6;
    repeated ChannelAccessControl accesscontrols = 7;
}

message CreateChannelRequest {
    Channel channel = 1;
}
message ChannelResponse {
    Channel channel = 1;
}

message ChannelListResponse {
    repeated Channel channels = 1;
    PaginationResponse pagination = 2;
}

message ListChannelsRequest {
    optional string name = 1;
    optional string device_name = 2;  
    optional PaginationRequest pagination = 3;
}

message UpdateChannelRequest { 
    Channel channel = 1;
}

message DeleteChannelRequest {
    string name = 1;
}

message GetChannelRequest {
    string name = 1;
}

message AddChannelTransformRequest {
    string channel_name = 1;
    ChannelTransform transform = 2;
}

message DeleteChannelTransformRequest {
    string channel_name = 1;
    string transform_name = 2;
}

message UpdateChannelTransformRequest {
    string channel_name = 1;
    ChannelTransform transform = 2;
}

message ChannelTransformResponse {
    string channel_name = 1;
    ChannelTransform transform = 2;
}

message AddChannelAlarmRequest {
    string channel_name = 1;
    ChannelAlarm alarm = 2;
}

message DeleteChannelAlarmRequest {
    string channel_name = 1;
    string alarm_type = 2;
}

message UpdateChannelAlarmRequest {
    string channel_name = 1;
    ChannelAlarm alarm = 2;
}

message ChannelAlarmResponse {
    string channel_name = 1;
    ChannelAlarm alarm = 2;
}

message AddChannelAccessControlRequest {
    string channel_name = 1;
    ChannelAccessControl accesscontrol = 2;
}

message DeleteChannelAccessControlRequest {
    string channel_name = 1;
    string role = 2;
}

message UpdateChannelAccessControlRequest {
    string channel_name = 1;
    ChannelAccessControl accesscontrol = 2;
}

message ChannelAccessControlResponse {
    string channel_name = 1;
    ChannelAccessControl accesscontrol = 2;
}
