syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto";
option go_package = "nameserver/proto";

import "pagination.proto";

message Node {
    string hostname = 1;
    optional string description = 2;
    string ip_address = 3;
    string location_name = 4;
}

message CreateNodeRequest {
    Node node = 1;
}
message NodeResponse {
    Node node = 1;
}

message NodeListResponse {
    repeated Node nodes = 1;
    PaginationResponse pagination = 2;
}

message ListNodesRequest {
    optional string hostname = 1;    
    optional string ip_address = 2;
    optional string location_name = 3;
    optional PaginationRequest pagination = 4;    
}

message UpdateNodeRequest { 
    Node node = 1;
}

message DeleteNodeRequest {
    string hostname = 1;
}
message GetNodeRequest {
    string hostname = 1;
}